# langchain-box-agent

./: .gitignore  README.md  pyproject.toml
src/: box_agent_langgraph.py  langgraph.json  run_agent_demo.py
src/demo/: agent_implementations.py  langchain_box_agent_ui.py  langchain_box_agent_ui_utils.py  launcher.py  run_agent_real.py  run_agent_simulated.py
src/langchain_box_agent/: __init__.py  box_agent.py  box_tools.py
src/langchain_box_agent/box/: box_api.py  box_authentication.py
tests/: conftest.py  test_agent_tools.py  test_box_auth.py  test_chat_model.py
