[project]
name = "langchain-box-agent"
version = "0.0.1"
description = "A LangChain agent for Box"
readme = "README.md"
authors = [{ email = "barduinor@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["box-sdk-gen>=1.13.0", "python-dotenv>=1.0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.2"]
