[project]
name = "langchain-box-agent"
version = "0.0.1"
description = "A LangChain agent for Box"
readme = "README.md"
authors = [{ email = "barduinor@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "box-ai-agents-toolkit>=0.0.32",
    "langchain>=0.3.21",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["langchain-openai>=0.3.10", "pytest>=8.3.5", "ruff>=0.11.2"]
